...
                                  Future.delayed(const Duration(milliseconds: 500), () {
                                    ScaffoldMessenger.of(context).clearSnackBars();

                                    Navigator.of(context).pushNamedAndRemoveUntil(loginRoute, (Route<dynamic> route) => false);
                                    ScaffoldMessenger.of(context).showSnackBar(
                                      SnackBar(
                                        content: Text('Dados atualizados, faça seu login novamente.'),
                                        duration: Duration(seconds: 4),
                                        backgroundColor: Colors.green,
                                      ),
                                    );
                                  });

...
                                    );
                                  }
                                }
                              }
                            },
                            child: Text(
                              'ATUALIZAR',
                              style: TextStyle(
                                color: CustomColors.orangePrimary,
                                letterSpacing: 1.5,
                                fontSize: 18.0,
                                fontWeight: FontWeight.bold,
                                fontFamily: 'OpenSans',
...
